# qiime2

./: .copier-answers.yml  .gitignore  Makefile  README.md  pyproject.toml
conda-recipe/: meta.yaml
qiime2/: __init__.py  plugins.py  util.py
qiime2/core/: annotate.py  cache.py  cite.py  enan.py  exceptions.py  format.py  missing.py  path.py  transform.py  util.py  validate.py
qiime2/core/archive/: __init__.py  archiver.py  provenance.py
qiime2/core/testing/: examples.py  format.py  mapped.py  method.py  pipeline.py  plugin.py  transformer.py  type.py  util.py  validator.py  visualizer.py
qiime2/core/tests/: test_annotate.py  test_cache.py  test_enan.py  test_missing.py  test_path.py  test_pipeline_resumption.py  test_util.py  test_validate.py
qiime2/core/type/: __init__.py  collection.py  grammar.py  meta.py  parse.py  primitive.py  semantic.py  signature.py  template.py  util.py  visualization.py
qiime2/jupyter/: __init__.py  handlers.py  hooks.py  template.py
qiime2/metadata/: __init__.py  base.py  io.py  metadata.py
qiime2/metadata/tests/: test_io.py  test_metadata.py  test_metadata_column.py
qiime2/plugin/: __init__.py  plugin.py  testing.py  util.py
qiime2/plugin/model/: __init__.py  base.py  directory_format.py  file_format.py
qiime2/plugin/tests/: test_plugin.py  test_tests.py
qiime2/sdk/: __init__.py  action.py  actiongraph.py  iresult.py  parallel_config.py  plugin_manager.py  proxy.py  result.py  results.py  usage.py  util.py
qiime2/sdk/context/: __init__.py  base.py  (+2 more)
qiime2/tests/: mystery_stew.py  test_artifact_api.py  test_util.py
(+54 files in other folders)
