[project]
name = "qiime2"
authors = [
    { name = "None", email = "developers@qiime2.org" }
]
description = "None"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://qiime2.org"
Repository = "https://github.com/qiime2/qiime2"

[project.entry-points.'qiime2.plugins']
"dummy-plugin" = "qiime2.core.testing.plugin:dummy_plugin"
"other-plugin" = "qiime2.core.testing.plugin:other_plugin"

[project.entry-points.'qiime2.usage_drivers']
"python3" = "qiime2.core.archive.provenance_lib:ReplayPythonUsage"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "qiime2/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["qiime2*"]

[tool.setuptools.package-data]
qiime2 = ["**/*"]
